先暂存下，后面用矩阵形式做

--- a/simpleReg/simpleReg/simpleReg.vcxproj.filters
+++ b/simpleReg/simpleReg/simpleReg.vcxproj.filters
@@ -18,12 +18,12 @@
     <ClCompile Include="simpleReg.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="LinearRegression.cpp">
+    <ClCompile Include="LinearReg.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="LinearRegression.h">
+    <ClInclude Include="LinearReg.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
