--- a/simpleReg/simpleReg/simpleReg.vcxproj
+++ b/simpleReg/simpleReg/simpleReg.vcxproj
@@ -151,11 +151,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="LinearRegression.cpp" />
+    <ClCompile Include="LinearReg.cpp" />
     <ClCompile Include="simpleReg.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="LinearRegression.h" />
+    <ClInclude Include="LinearReg.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
